Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115523

[REG: 6.5.1->6.5.2] More complex javascript objects not converted to QVariantMap anymore

XMLWordPrintable

    • afe96c4d6 (dev), 278ef0601 (6.6), 79175ef10 (6.5)

      Simple objects are converted, but more complex objects result in an empty QVariantMap.

        1. qtbug115523.zip
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-115523
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes