QML: Do convert objects with prototypes to QVariantMap

While we shouldn't convert to QVariantMap if only QVariant is requested,
we should convert if QVariantMap is explicitly requested. QVariant can
hold QJSValue which is a better fit for objects with properties.
QVariantMap cannot hold QJSValue. A best effort conversion is still
better than an empty map.

Amends commit 47678c682f168eb6d5020383ea75fe1700e8c4f6.

Fixes: QTBUG-115523
Change-Id: Iaa96809ee411dc0db95311c641c4e3f1f51a6026
Reviewed-by: Amanda Hamblin-Trué <amanda.hamblin-true@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit afe96c4d633146df477012975824b8ab65034239)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>